trybuild-qcell/src/compiletest/tlcell-03.stderr
error[E0308]: mismatched types
  --> src/compiletest/tlcell-03.rs:17:31
   |
17 |     let c1mutref = owner_b.rw(&*c1);    // Compile error
   |                            -- ^^^^ expected struct `MarkerB`, found struct `MarkerA`
   |                            |
   |                            arguments to this function are incorrect
   |
   = note: expected reference `&TLCell<MarkerB, _>`
              found reference `&TLCell<MarkerA, u32>`
note: associated function defined here
  --> $QCELL/src/tlcell.rs
   |
   |     pub fn rw<'a, T: ?Sized>(&'a mut self, tc: &'a TLCell<Q, T>) -> &'a mut T {
   |            ^^
